--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../full-stack-open-2022/part2/phonebook/ && npm run build && cp -r build ../../../full-stack-phonebook",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku ogs --tail"
+    "logs:prod": "heroku ogs --tail",
+    "lint": "eslint ."
   },
   "author": "Ishaan Jamdar",
   "license": "MIT",
@@ -22,6 +23,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.23.0",
     "nodemon": "^2.0.19"
   }
 }
